# python.template

./: .gitignore  Makefile  README.md  build.envd  pyproject.toml
.github/workflows/: check.yml  release.yml
