[project]
name = "python-template"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "pdm-backend>=2.4.3",
    "ruff>=0.9.2",
    "pytest>=8.0.0",
]

[tool.ruff]
target-version = "py39"
[tool.ruff.lint]
select = ["E", "F", "G", "B", "I", "SIM", "TID", "PL", "RUF"]
ignore = ["E501"]
[tool.ruff.lint.pylint]
max-args = 7

[tool.pdm]
distribution = true
[tool.pdm.version]
source = "scm"
fallback_version = "0.0.0"
write_to = "vechord/__version__.py"
write_template = "__version__ = '{}'"
