[project]
name = "python-template"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
target-version = "py39"
[tool.ruff.lint]
select = ["E", "F", "G", "B", "I", "SIM", "TID", "PL", "RUF"]
ignore = ["E501"]

[tool.pdm]
distribution = true
[tool.pdm.version]
source = "scm"
fallback_version = "0.0.0"
write_to = "python-template/__version__.py"
write_template = "__version__ = '{}'"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.build-dependencies]
ruff = ">=0.11.6,<0.12"
pytest = ">=8.3.5,<9"
pdm = ">=2.24.0,<3"
